--- a/style.css
+++ b/style.css
@@ -1,3 +1,46 @@
 * {
-    /*sup*/
+    margin: 0;
+    padding: 0;
+    color: #7ec23a;
+    color: #e6df22;
+    color: #e3d496;
+    color: #e08734;
+    columns: #61b3d4;
+}
+
+header {
+    display: flex;
+    height: 5rem;
+    background-color: #7ec23a;
+}
+header h1 {
+    color: white;
+
+}
+header img {
+    padding: 1rem;
+    height: 3rem;
+}
+
+header nav {
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+header nav ul {
+    display: flex;
+    list-style: none;
+}
+
+header nav ul li {
+    margin-left: 1rem;
+
+}
+
+header nav ul li a {
+    text-decoration: none;
+    font-size: 1.5em;
+    color: white;
+    background: url(./images/leaf.png);
+    background-size: cover;
 }
