--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
 * {
     margin: 0;
     padding: 0;
+/*
     color: #7ec23a;
     color: #e6df22;
     color: #e3d496;
     color: #e08734;
     columns: #61b3d4;
+*/
 }
 
 .login-page {
