--- a/style.css
+++ b/style.css
@@ -1,12 +1,10 @@
-*{
-    /*sup*/
-}
-
+*
 .login-page {
     width: 360px;
     padding: 8% 0 0;
     margin: auto;
   }
+
   .form {
     position: relative;
     z-index: 1;
@@ -34,7 +32,7 @@
     font-family: "Roboto", sans-serif;
     text-transform: uppercase;
     outline: 0;
-    background: #00ff08;
+    background: #7EC23A;
     width: 100%;
     border: 0;
     padding: 15px;
@@ -89,8 +87,4 @@
       background-image: url(8f0338891c8e74da6f4cf0d4334c97a8.png);
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;   
-  }
-
-  @media only screen and (max-width: 667px){
-
   }
