--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@
     margin: auto;
   }
 
+  .login-page h3 {
+      margin-bottom: 3rem;
+  }
+
   .form {
     position: relative;
     z-index: 1;
@@ -133,7 +137,4 @@ header nav ul li a {
     padding: 0.3rem;
     color: #ffffff;
 }
-    color: #ffffff;
-    background: url(./images/leaf.png);
-    background-size: cover;
-}
+
